# mocap_optitrack

./: CMakeLists.txt  package.xml
config/: mocap_bwam.yaml
launch/: mocap_bwam.launch
src/: CMakeLists.txt  bwam_jt_track.cpp  mocap_node.cpp
